chore: update autoLeetCode

--- a/.github/workflows/autoLeetCode.yml
+++ b/.github/workflows/autoLeetCode.yml
@@ -24,5 +24,6 @@ jobs:
           destination-repository-name: Algorithm
           commit-message: ${{ github.event.commits[0].message }}
           target-branch: main
+          target-directory: LeetCode
       - name: Test get variable exported by push-to-another-repository
         run: echo $DESTINATION_CLONED_DIRECTORY
